    build-dependencies consistent.
  * Added Swedish debconf templates translation (closes: #490681).
  * Updated Russian debconf templates translation.
  * Updated Spanish debconf templates translation.
  * Added Galician debconf templates translation (closes: #490855).
  * Added Vietnamese debconf templates translation (closes: #491056).

  [ Torsten Werner ]
  * Updated German debconf templates translation.

 -- Torsten Werner <twerner@debian.org>  Wed, 16 Jul 2008 23:05:34 +0200

ejabberd (2.0.1-2) unstable; urgency=low

  * Improved a patch which removes message rejecting intervals for
    server-to-server recipients.
  * Bumped standards version to 3.8.0.

 -- Sergei Golovan <sgolovan@debian.org>  Fri, 20 Jun 2008 10:07:29 +0400

ejabberd (2.0.1-1) unstable; urgency=low

  * New upstream bugfix release.
  * Refreshed patches, removed those which were included into upstream.
  * Added _2 suffix to get-orig-source target in debian/rules (temporarily).
  * Fixed debian/watch to cover current release version (with _2 suffix).
  * Fixed mod_ctlextra to work with ejabberd 2.0.1 (changed session record
    definition).
  * Added new ejabberdctl commands (both new in 2.0.1 and in mod_ctlextra)
    to ejabberdctl manual page.
  * Changed restart branch in init.d script to perform full Erlang VM stop
    and start again (this allows to apply changes in /etc/default/ejabberd
    if any during ejabberd restart).
  * Clarified -sname and -name Erlang option usage by ejabberd and ejabberdctl
    in their manual pages (closes: #482904).
  * Added BUGS section to ejabberd manual page with a short description of
    the most common cases of ejabberd start failures (closes: #481819).

 -- Sergei Golovan <sgolovan@debian.org>  Sun, 08 Jun 2008 16:32:18 +0400

ejabberd (2.0.0-7) unstable; urgency=low

  [ Sergei Golovan ]
  * Installed eldap.hrl header. It is necessary to build some external modules
    for ejabberd.