@@ -10,11 +10,12 @@ ejabberd (2.0.1-3) unstable; urgency=low
   * Updated Spanish debconf templates translation.
   * Added Galician debconf templates translation (closes: #490855).
   * Added Vietnamese debconf templates translation (closes: #491056).
+  * Cleaned up LDAPS patch.
 
   [ Torsten Werner ]
   * Updated German debconf templates translation.
 
- -- Torsten Werner <twerner@debian.org>  Wed, 16 Jul 2008 23:05:34 +0200
+ -- Sergei Golovan <sgolovan@debian.org>  Thu, 17 Jul 2008 20:10:31 +0400
 
 ejabberd (2.0.1-2) unstable; urgency=low
 
